--- a/resource.qrc
+++ b/resource.qrc
@@ -1,7 +1,9 @@
 <RCC>
   <qresource>
+    <file>images/arrow.png</file>
     <file>images/black.png</file>
     <file>images/blue.png</file>
+    <file>images/circle.png</file>
     <file>images/clear.jpg</file>
     <file>images/eleven.png</file>
     <file>images/eraser.jpg</file>
@@ -9,8 +11,11 @@
     <file>images/exit.jpg</file>
     <file>images/five.png</file>
     <file>images/green.png</file>
+    <file>images/line.png</file>
     <file>images/nine.png</file>
+    <file>images/rectangle.png</file>
     <file>images/red.png</file>
+    <file>images/roundedrectangle.png</file>
     <file>images/save.png</file>
     <file>images/seven.png</file>
     <file>images/thirteen.png</file>
